<resources>
    <string name="app_name">MyMoviesSpectrum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="genre">Genre</string>
    <string name="something_wrong">Something wrong!</string>
    <string name="label_ok">OK</string>
    <string name="tv_cast">Cast</string>
    <string name="tv_overview">Overview</string>
    <string name="tv_backdrop">Backdrop</string>
    <string name="release_date">Release Date</string>
    <string name="title">Title</string>
    <string name="vote_average">Vote Average</string>
    <string name="vote_count">Vote Count</string>
    <string name="spoken_languages">Spoken Languages</string>
    <string name="search">Search</string>
</resources>